--- a/index.html
+++ b/index.html
@@ -5,8 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion House</title>
-</head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- font family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    </head>
 <body>
-    
+    <!-- navbar section -->
+    <header class="container header-section">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                  <img width="291px" class="" src="images/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse me-4" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0" style="font-weight: 500;">
+                  <li class="nav-item me-4">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item me-4">
+                    <a class="nav-link active" href="#">Product</a>
+                  </li>
+                  <li class="nav-item me-4">
+                    <a class="nav-link active" href="#">About Us</a>
+                  </li>
+                  <li class="nav-item me-4">
+                    <a class="nav-link active" href="#">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+          <!-- front banner section -->
+          <div class="front-banner d-flex mt-3 ms-3">
+            <div class="banner-text">
+                <h1 class="mt-5 title"><span class="penguin">BE THE PENGUINS</span> OF WINTER</h1>
+                <p class="banner-details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, explicabo cumque?</p>
+                <button type="button" class="button p-3 ps-4 pe-4"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</button>
+            </div>
+            <div class="banner-pic">
+                <img class="banner-image" src="images/model.png" alt="">
+            </div>
+          </div>
+    </header>
+
+
+    <script src="https://kit.fontawesome.com/e4deb5fc18.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
