added shopping section

--- a/index.html
+++ b/index.html
@@ -200,6 +200,46 @@
     </section>
 
     <!-- Shopping section -->
+    <section class="container shopping">
+        <div class="shopping d-flex">
+            <div class="menus ms-3">
+                <div class="house d-flex shadow p-3 pb-0 mb-4 bg-body">
+                    <div class="logos">
+                        <img style="width: 78px;" src="images/house.png" alt="">
+                    </div>
+                    <div class="menu-txt">
+                        <h4 class="menu-title">Find the Perfect Fit</h4>
+                        <p style="width: 277px;" class="menu-para">Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="house d-flex shadow p-3 pb-0 mb-4 bg-body">
+                    <div class="logos">
+                        <img style="width: 78px;" src="images/box.png" alt="">
+                    </div>
+                    <div class="menu-txt">
+                        <h4 class="menu-title">Find the Perfect Fit</h4>
+                        <p style="width: 277px;" class="menu-para">Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="house d-flex shadow p-3 pb-0 mb-4 bg-body">
+                    <div class="logos">
+                        <img style="width: 78px;" src="images/question.png" alt="">
+                    </div>
+                    <div class="menu-txt">
+                        <h4 class="menu-title">Find the Perfect Fit</h4>
+                        <p style="width: 277px;" class="menu-para">Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="shop-img">
+                <img class="shop-img" src="images/shopping.png" alt="">
+            </div>
+
+        </div>
+    </section>
 
 
     <script src="https://kit.fontawesome.com/e4deb5fc18.js" crossorigin="anonymous"></script>
