--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion House</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/shopping.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- font family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -240,6 +240,13 @@
 
         </div>
     </section>
+
+    <!-- footer section -->
+    <footer class="foot text-center p-3 mb-5">
+        <h5>Developed By ASSRAFUZZAMAN NUR</h5>
+        <p>No copyright claimed by anyone, feel free to snap the source code.</p>
+        <p>#peace</p>
+    </footer>
 
 
     <script src="https://kit.fontawesome.com/e4deb5fc18.js" crossorigin="anonymous"></script>
